Add chest Loot Tables (#2)